--- a/index.html
+++ b/index.html
@@ -18,13 +18,12 @@
             <li class="link"><a href="#competence">Competence</a></li>
             <li class="link"><a href="#projet">Projet</a></li>
             <li class="link"><a href="#contact">Contact</a></li>
-            <li class="link"><a href="#loisir">Loisir</a></li>
         </ul>
         </nav>
     </header>
    <div class="container"> 
     <div class="header">
-        <img src="images/profil2.png" />
+        <img src="images/boss.png" />
         <div class="inforigth">
             <div class="socialMedia">
                 <ul class="header__ul">
