--- a/index.html
+++ b/index.html
@@ -210,9 +210,9 @@
             <div class="descright">
                 <h2>Présentation</h2>
                 <div class="contvideo">
-                    <video class="video" controls>
+                    <video class="video" autoplay muted controls>
                         <source src="/images/blog.mp4"
-                        type="video/webm">
+                        type="video/webm" >
                     </video>
                 </div>
             </div>
@@ -238,7 +238,7 @@
             <div class="descright">
                 <h2>Présentation</h2>
                 <div class="contvideo">
-                    <video class="video" controls>
+                    <video class="video"  autoplay muted controls>
                         <source src="/images/restau.mp4"
                         type="video/webm">
                     </video>
@@ -269,7 +269,7 @@
             <div class="descright">
                 <h2>Présentation</h2>
                 <div class="contvideo">
-                    <video class="video" controls>
+                    <video class="video"  autoplay muted controls>
                         <source src="/images/tournois.mp4"
                         type="video/webm">
                     </video>
@@ -296,7 +296,7 @@
             <div class="descright">
                 <h2>Présentation</h2>
                 <div class="contvideo">
-                    <video class="video" controls>
+                    <video class="video"  autoplay muted controls>
                         <source src="/images/reactNative.mp4"
                         type="video/webm">
                     </video>
@@ -322,7 +322,7 @@
             <div class="descright">
                 <h2>Présentation</h2>
                 <div class="contvideo">
-                    <video class="video" controls>
+                    <video class="video"  autoplay muted controls>
                         <source src="/images/socket.mp4"
                         type="video/webm">
                     </video>
