--- a/index.html
+++ b/index.html
@@ -143,13 +143,18 @@
                           <img src="images/logo512.png"/>
                           <p>React</p>
                       </li>
+                      
                       <li>
-                          <img src="images/redux.png"/>
-                          <p>Redux</p>
+                          <img src="images/angular.png"/>
+                          <p>Angular</p>
                       </li>
                       <li>
                           <img src="images/bootstrap.png"/>
                           <p>Bootstrap</p>
+                      </li>
+                      <li>
+                          <img src="images/redux.png"/>
+                          <p>Redux</p>
                       </li>
                       <li>
                           <img src="images/styled.png"/>
