--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </nav>
     </header>
    <div class="container"> 
-    <div class="header">
+    <div class="header" id="acceuil">
         <img src="images/boss.png" />
         <div class="inforigth">
             <div class="socialMedia">
