--- a/index.html
+++ b/index.html
@@ -200,6 +200,33 @@
                 <h2>Description</h2>
                 <div class="ulprojet">
                     <div class='descp'>
+                        <p>Application de gestion de Stock avec Django</p>
+                        <span>Dans ce projet un administrateur peut creer un compte ,se connecter et gerer les client ,les produits ainsi que les commandes des clients</span>
+                    </div>
+                    <ul class='tech'>
+                        <li>Django</li>
+                        <li>MongoDb</li>
+                        <li>Html</li>
+                        <li>Css</li>
+                        <li>Bootstrap</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="descright">
+                <h2>Présentation</h2>
+                <div class="contvideo">
+                    <video class="video" autoplay muted controls>
+                        <source src="/images/django.mp4"
+                        type="video/webm" >
+                    </video>
+                </div>
+            </div>
+        </div>
+        <div class="detailprojet">
+            <div class="descleft">
+                <h2>Description</h2>
+                <div class="ulprojet">
+                    <div class='descp'>
                         <p>Mon blog personnel</p>
                         <span>Dans mon blog ,je propose des tutoriels et des projets que j'ai pu realiser pour aider les passionneur du web comme moi et leur faciliter les taches en tant que debutant ou autres et avec django comme backend</span>
                     </div>
