ajout de asp net core

--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
   <head>
     <link href="style.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <script src="https://kit.fontawesome.com/99eeb33ab3.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Crete+Round" rel="stylesheet">
+    <link rel="icon" href="images/logo.png" />
     <title>Abdouraouf</title>
   </head>
   <body>
@@ -139,15 +141,12 @@
                           <img src="images/logo512.png"/>
                           <p>React</p>
                       </li>
-                      <li>
-                          <img src="images/native.png"/>
-                          <p>ReactNative</p>
-                      </li>
                       
+                     
                       <li>
-                          <img src="images/angular.png"/>
-                          <p>Angular</p>
-                      </li>
+                        <img src="images/native.png"/>
+                        <p>ReactNative</p>
+                    </li>
                       <li>
                           <img src="images/bootstrap.png"/>
                           <p>Bootstrap</p>
@@ -170,6 +169,10 @@
                           <img src="images/spring.jpg" />
                           <p>Spring Boot</p>
                       </li>
+                      <li>
+                        <img src="images/asp.svg"/>
+                        <p>Asp.Net Core</p>
+                     </li>
                       <li>
                           <img src="images/mysql.png" />
                           <p>MySql</p>
